--- a/package.json
+++ b/package.json
@@ -8,15 +8,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.2",
+    "@heroicons/react": "^1.0.5",
+    "axios": "^0.24.0",
+    "axios-hooks": "^3.0.0",
+    "chart.js": "^3.6.2",
+    "leaflet": "^1.7.1",
+    "leaflet-defaulticon-compatibility": "^0.1.1",
     "next": "12.0.7",
+    "numeral": "^2.0.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-chartjs-2": "^4.0.0",
+    "react-dom": "17.0.2",
+    "react-leaflet": "^3.2.2"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.7.6",
     "@types/node": "16.11.12",
+    "@types/numeral": "^2.0.2",
     "@types/react": "17.0.37",
+    "autoprefixer": "^10.4.0",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.4",
+    "tailwindcss": "^3.0.0",
     "typescript": "4.5.2"
   }
 }
